Added Personal Info

--- a/test.html
+++ b/test.html
@@ -1,4 +1,6 @@
 <head>
 <link rel="stylesheet" type="text/css" href="test.css">
 </head>
-asdfasdf
+Brian Joshua M. Revilla
+CMSC 128 - AB-4L
+Black
